--- a/.htaccess
+++ b/.htaccess
@@ -38,6 +38,8 @@ ErrorDocument 500 /errors/500.html
 
 
 RewriteEngine On
+RewriteCond %{HTTP:Authorization} .+
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
 # Redirect .php URLs to clean URLs
 RewriteCond %{THE_REQUEST} \s/([^.]+)\.php [NC]
